--- a/assets/sass/4-layouts/_home.sass
+++ b/assets/sass/4-layouts/_home.sass
@@ -438,7 +438,7 @@
         width: 100%
         height: auto
         display: block
-        background-color: $basecolor4
+        background-color: #145ddd
         padding: 30px 0 0
         @media only screen and (min-width: 576px)
             padding: 40px 0 0
@@ -467,7 +467,7 @@
                 @include imgFit
 
 #LifeDlu
-    --galbx-y: 140px
+    --galbx-y: 160px
     width: 100%
     height: auto
     display: block
@@ -495,7 +495,7 @@
         .mHd
             font-size: 4em
             line-height: 1
-            color: $basecolor4
+            color: #145ddd
             margin: 0
             @media only screen and (min-width: 992px)
                 font-size: 8em
@@ -530,7 +530,7 @@
         padding: 80px 0 120px
     .tleWrap
         .mHd
-            color: $basecolor4
+            color: #145ddd
     .gatewaySlide
         --bx-y: 30px
         @media only screen and (min-width: 768px)
@@ -601,7 +601,7 @@
         width: 100%
         height: auto
         display: block
-        background-color: $basecolor4
+        background-color: #145ddd
         padding: 20px 0
         @media only screen and (min-width: 576px)
             padding: 60px 0
@@ -642,3 +642,111 @@
             display: block
             img
                 @include imgFit
+
+// #GetTouch
+//     width: 100%
+//     height: auto
+//     display: block
+//     position: relative
+//     z-index: 0
+//     padding: 30px 0 15px
+//     @media only screen and (min-width: 576px)
+//         padding: 60px 0 30px
+//     @media only screen and (min-width: 992px)
+//         padding: 80px 0 40px
+//     @media only screen and (min-width: 1551px)
+//         padding: 100px 0 50px
+//     .delmt
+//         width: 100%
+//         max-width: 120px
+//         height: auto
+//         display: block
+//         opacity: 0.4
+//         position: absolute
+//         z-index: -1
+//         top: 15%
+//         left: 0
+//         transform: translate(-50%, -50%)
+//         @media only screen and (min-width: 576px)
+//             max-width: 260px
+//         @media only screen and (min-width: 992px)
+//             max-width: 468px
+//             opacity: 1
+//         @media only screen and (min-width: 1551px)
+//             max-width: 576px
+//         &_fruit
+//             width: 80px
+//             height: auto
+//             opacity: 0.4
+//             position: absolute
+//             z-index: -1
+//             top: 15%
+//             right: 0
+//             transform: translate(50%, -50%)
+//             @media only screen and (min-width: 576px)
+//                 width: 220px
+//             @media only screen and (min-width: 992px)
+//                 width: 276px
+//                 opacity: 1
+//             @media only screen and (min-width: 1551px)
+//                 width: 320px
+//         &_pineapple
+//             width: 80px
+//             height: auto
+//             position: absolute
+//             z-index: -1
+//             bottom: -20px
+//             left: 30%
+//             @media only screen and (min-width: 576px)
+//                 width: 100px
+//             @media only screen and (min-width: 992px)
+//                 width: 120px
+//             @media only screen and (min-width: 1551px)
+//                 width: 180px
+//         img
+//             width: 100%
+//             height: auto
+//             display: block
+//     .tleWrap
+//         .mTle, .mTle span
+//             color: $text
+//         .secTle
+//             font-size: 20px
+//             line-height: 1.2
+//             font-weight: 700
+//             color: $basecolor2
+//             display: block
+//             @media only screen and (min-width: 576px)
+//                 font-size: 26px
+//             @media only screen and (min-width: 992px)
+//                 font-size: 34px
+//             @media only screen and (min-width: 1551px)
+//                 font-size: 48px
+//             @media only screen and (min-width: 1771px)
+//                 font-size: 60px
+//     .formWrap, .tleWrap>p
+//         width: 100%
+//         height: auto
+//         margin-left: auto
+//         margin-right: auto
+//         @media only screen and (min-width: 576px)
+//             max-width: 576px
+//         @media only screen and (min-width: 992px)
+//             max-width: 768px
+//         @media only screen and (min-width: 1551px)
+//             max-width: 1080px
+//     .formWrap
+//         width: 100%
+//         height: auto
+//         display: block
+//         .btnWrap
+//             width: 100%
+//             height: auto
+//             display: block
+//             margin-top: 15px
+//             @media only screen and (min-width: 992px)
+//                 margin-top: 20px
+//             @media only screen and (min-width: 1551px)
+//                 margin-top: 40px
+//             .baseBtn
+//                 margin: auto
