--- a/assets/sass/5-pages/_eBlogs.sass
+++ b/assets/sass/5-pages/_eBlogs.sass
@@ -145,7 +145,7 @@
             padding: 20px 0 100px
         .exGallerySlide
             margin: auto
-            --swiper-pagination-color: #145ddd
+            --swiper-pagination-color: $basecolor4
             --swiper-pagination-bottom: 0
             --swiper-pagination-bullet-inactive-color: #a0a0a0
             --swiper-pagination-bullet-inactive-opacity: 1
