--- a/assets/sass/5-pages/_index.sass
+++ b/assets/sass/5-pages/_index.sass
@@ -1,4 +1,9 @@
 @forward "components"
+@forward "legal"
+@forward "error" 
 
 @forward "about"
 @forward "course"
+@forward "contact"
+@forward "team"
+@forward "eBlogs"
