--- a/assets/sass/2-plugins/_plugin.sass
+++ b/assets/sass/2-plugins/_plugin.sass
@@ -102,7 +102,15 @@
 
 // SWIPER_VERTICAL_PAGINATION
 .swiper
+    --swiper-preloader-color: $basecolor
+    --swiper-theme-color: $basecolor2
+    --swiper-navigation-size: 30px !important
+    @media only screen and (min-width: 992px)
+        --swiper-navigation-size: 50px !important
+    @media only screen and (min-width: 1551px)
+        --swiper-navigation-size: 50px !important
     .swiper-button-prev, .swiper-button-next
+        transition: transform 0.4s
         width: var(--swiper-navigation-size)
         &:hover
             transform: scale(0.9)
@@ -192,7 +200,7 @@
 // SELECT2_CUSTOM
 .select2-container--select2-custom
     width: auto !important
-    display: block
+    display: block !important
     &[dir="rtl"],  &[dir="ltr"]
         .select2-selection--single
             .select2-selection__rendered
@@ -207,6 +215,12 @@
         position: relative
         z-index: 0
         justify-content: space-between
+        display: flex !important
+        height: 40px !important
+        @media only screen and (min-width: 992px)
+            height: 50px !important
+        @media only screen and (min-width: 1551px)
+            height: 60px !important
         &[aria-expanded="true"]
             .select2-selection__arrow
                 transform: rotate(180deg)
@@ -236,14 +250,14 @@
             content: ""
             width: 16px
             height: 10px
-            background-image: url('data:image/svg+xml,<svg width="10" height="6" viewBox="0 0 10 6" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M4.99978 5.33312C4.92301 5.33356 4.84691 5.31884 4.77584 5.28982C4.70477 5.26079 4.64012 5.21801 4.58562 5.16395L1.08562 1.66395C0.975772 1.55411 0.914063 1.40513 0.914062 1.24978C0.914062 1.09444 0.975772 0.94546 1.08562 0.835616C1.19546 0.725772 1.34444 0.664062 1.49978 0.664062C1.65513 0.664062 1.80411 0.725772 1.91395 0.835616L4.99978 3.92728L8.08562 0.841449C8.19721 0.745884 8.34075 0.695947 8.48756 0.701618C8.63438 0.707288 8.77364 0.768149 8.87753 0.872038C8.98142 0.975926 9.04228 1.11519 9.04795 1.262C9.05362 1.40881 9.00368 1.55236 8.90812 1.66395L5.40812 5.16395C5.29946 5.27172 5.15281 5.33247 4.99978 5.33312Z" fill="black"/></svg>')
+            background-image: url('data:image/svg+xml,<svg width="10" height="6" viewBox="0 0 10 6" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M4.99978 5.33312C4.92301 5.33356 4.84691 5.31884 4.77584 5.28982C4.70477 5.26079 4.64012 5.21801 4.58562 5.16395L1.08562 1.66395C0.975772 1.55411 0.914063 1.40513 0.914062 1.24978C0.914062 1.09444 0.975772 0.94546 1.08562 0.835616C1.19546 0.725772 1.34444 0.664062 1.49978 0.664062C1.65513 0.664062 1.80411 0.725772 1.91395 0.835616L4.99978 3.92728L8.08562 0.841449C8.19721 0.745884 8.34075 0.695947 8.48756 0.701618C8.63438 0.707288 8.77364 0.768149 8.87753 0.872038C8.98142 0.975926 9.04228 1.11519 9.04795 1.262C9.05362 1.40881 9.00368 1.55236 8.90812 1.66395L5.40812 5.16395C5.29946 5.27172 5.15281 5.33247 4.99978 5.33312Z" fill="white"/></svg>')
             background-repeat: no-repeat
             background-size: contain
             display: inline-block
             margin: 2px 0 0 0
     .select2-dropdown
-        border-color: rgba(170, 170, 170, 0.6)
-        background-color: $white
+        border-color: rgba($basecolor, 0.6)
+        background-color: $black
         backdrop-filter: blur(40px)
         max-height: 200px
         overflow-y: auto
