--- a/assets/sass/5-pages/_about.sass
+++ b/assets/sass/5-pages/_about.sass
@@ -17,6 +17,7 @@
             height: auto
             @include display
             .imgWrap
+                @extend %secTle2
                 width: 100%
                 height: auto
                 display: block
