--- a/assets/sass/4-layouts/_home.sass
+++ b/assets/sass/4-layouts/_home.sass
@@ -93,6 +93,8 @@
     @media only screen and (min-width: 992px)
         padding: 60px 0
     .programSlide
+        @media only screen and (max-width: 467px)
+            margin-right: -15px 
         .swiper-slide
             margin-top: auto
     .programBx
