--- a/assets/sass/5-pages/_course.sass
+++ b/assets/sass/5-pages/_course.sass
@@ -68,6 +68,9 @@
             width: 100%
             height: 100%
             display: block
+            margin-bottom: 15px 
+            @media only screen and (min-width: 576px)
+                margin-bottom: 0
             &:hover
                 img
                     transform: scale(1.05)
@@ -205,7 +208,7 @@
                         @media only screen and (min-width: 992px)
                             margin-bottom: 20px
             p
-                color: $basecolor
+                color: $basecolor4
         .cStructureSlide
             --swiper-pagination-color: white
             --swiper-pagination-bullet-width: 8px
@@ -750,7 +753,7 @@
             width: 100%
             max-width: 576px
             height: auto
-            aspect-ratio: 4/2
+            aspect-ratio: 4/4
             position: relative
             z-index: 0
             @media only screen and (min-width: 992px)
@@ -772,11 +775,13 @@
                 display: block
                 overflow: hidden
                 @media only screen and (min-width: 992px)
-                    width: 276px
+                    width: 200px
                     height: auto
                     aspect-ratio: 4/3
                     position: absolute
                     z-index: 0
+                @media only screen and (min-width: 1551px)
+                    width: 268px
                 &:hover
                     img
                         transform: scale(1.05)
@@ -879,12 +884,29 @@
     #CourseInfo
         @media only screen and (min-width: 576px)
             padding-bottom: 0
-    
 
 .coursePage.professionalModelling
     #CourseSyllabus
-        .cObjectBx
+        .cObjectSlide
             border-bottom: 1px solid #a0a0a0
+            .swiper-pagination
+                width: 40px
+                height: auto
+                background-color: $white
+                position: absolute
+                z-index: 1
+                top: 0
+                left: 0
+                bottom: auto
+                text-align: start
+                @media only screen and (min-width: 992px)
+                    width: 40px
+                .swiper-pagination-current
+                    color: $basecolor4
+            .cObjectBx
+                padding-left: 40px
+                @media only screen and (min-width: 992px)
+                    padding-left: 0
         .careerRoleBx
             ul
                 margin-left: 0
