--- a/assets/sass/3-modules/_modules.sass
+++ b/assets/sass/3-modules/_modules.sass
@@ -267,6 +267,7 @@
                 margin: 10px 0
     .exBtn
         @extend %baseBtnTxt
+        color: $basecolor
         width: 100%
         max-width: 120px
         height: 35px
@@ -280,7 +281,8 @@
             max-width: 130px
             margin-top: 10px
         @media only screen and (min-width: 992px)
-            max-width: 140px
+            font-size: 12px
+            max-width: 180px
             margin-top: 40px
         @media only screen and (min-width: 1551px)
             max-width: 160px
@@ -288,4 +290,6 @@
             color: $white
         &::before
             background-color: $basecolor
+        a
+            color: inherit 
 
