--- a/assets/sass/5-pages/_error.sass
+++ b/assets/sass/5-pages/_error.sass
@@ -45,7 +45,7 @@
         color: #696868
         margin: 0px
 
-    .btn
+    .baseBtn_1
         margin: auto
         margin-top: 15px
         @media only screen and (min-width: 468px)
