--- a/assets/sass/4-layouts/_header.sass
+++ b/assets/sass/4-layouts/_header.sass
@@ -162,6 +162,7 @@
         min-width: 160px
         height: auto
         background-color: $basecolor4
+        box-shadow: 0 0 4px 0 rgba($black, 0.4)
         @media only screen and (min-width: $header-collapse)
             min-width: 200px
             padding: 6px 0
@@ -521,6 +522,8 @@
                 &.active
                     color: $black
                     background-color: $basecolor2
+                span
+                    margin-top: 2px
             .qLinkBtn2
                 color: $basecolor
                 background-color: $white
