--- a/assets/sass/5-pages/_course.sass
+++ b/assets/sass/5-pages/_course.sass
@@ -401,6 +401,7 @@
                 text-transform: uppercase
                 font-family: $fontstack4
                 color: $text
+                margin-bottom: 10px
                 sub
                     font-size: 0.75rem
             .line
@@ -441,10 +442,11 @@
                 input[type=range]::-webkit-slider-thumb:active
                     box-shadow: inset 0 0 3px #387bbe, 0 0 9px #387bbe
                     -webkit-box-shadow: inset 0 0 3px #387bbe, 0 0 9px #387bbe
-
                 .lineTxt
-                    @extend %pTxt
+                    font-size: 8px
+                    line-height: 1.4
                     font-weight: 600
+                    color: $text
                     white-space: nowrap
                     text-transform: uppercase
                     position: absolute
@@ -452,6 +454,10 @@
                     top: 100%
                     left: var(--left-value)
                     transform: translate(-110%, 10px)
+                    @media only screen and (min-width: 992px)
+                        font-size: 10px
+                    @media only screen and (min-width: 1551px)
+                        font-size: 12px
         .careerRoleBx
             width: 100%
             height: auto
