--- a/assets/sass/5-pages/_eBlogs.sass
+++ b/assets/sass/5-pages/_eBlogs.sass
@@ -15,14 +15,17 @@
             text-transform: uppercase
             font-family: $fontstack4
             color: $white
+            white-space: nowrap
+            overflow: hidden
+            text-overflow: ellipsis
             @media only screen and (min-width: 576px)
-                font-size: 26px
+                font-size: 24px
             @media only screen and (min-width: 992px)
-                font-size: 64px
+                font-size: 44px
             @media only screen and (min-width: 1551px)
-                font-size: 72px
+                font-size: 52px
             @media only screen and (min-width: 1771px)
-                font-size: 100px
+                font-size: 72px
         .txt
             @extend %pTxt
             color: $white
@@ -48,6 +51,11 @@
                 margin: 5px 0
                 @media only screen and (min-width: 992px)
                     margin: 10px 0
+            .txt
+                display: -webkit-box
+                -webkit-box-orient: vertical
+                -webkit-line-clamp: 3
+                overflow: hidden
 
     #EventInfo
         width: 100%
@@ -131,6 +139,10 @@
                 display: block
                 transition: transform 0.4s
                 @include imgFit
+        .btnWrap
+            margin-top: 15px
+            @media only screen and (min-width: 992px)
+                margin-top: 25px
 
     #ExGallery
         width: 100%
