--- a/assets/sass/5-pages/_legal.sass
+++ b/assets/sass/5-pages/_legal.sass
@@ -22,6 +22,8 @@
                 margin-bottom: 20px
         .secDisc
             @extend %secDisc
+        .secDiscTxt
+            color: $white
         .dFlx
             @include display
             @media only screen and (min-width: 992px)
