--- a/assets/sass/4-layouts/_home.sass
+++ b/assets/sass/4-layouts/_home.sass
@@ -390,6 +390,7 @@
                     margin-bottom: 15px
             .txt
                 @extend %expertiseBxTxt
+                line-height: 1
                 text-transform: uppercase
                 background-color: $white
                 border-radius: 100px
