--- a/assets/sass/3-modules/_modules.sass
+++ b/assets/sass/3-modules/_modules.sass
@@ -293,3 +293,82 @@
         a
             color: inherit 
 
+// SOCIAL_MODELING
+#fixedRgt
+    position: fixed
+    z-index: 99
+    top: auto
+    bottom: 0
+    right: 0
+    width: 100%
+    display: flex
+    flex-wrap: wrap
+    align-items: center
+    justify-content: flex-start
+    box-shadow: 0 -10px 10px 0 rgba($black, 0.1)
+    @media only screen and (min-width: 576px)
+        width: 25px
+        top: 50%
+        bottom: auto
+        right: 10px
+        box-shadow: none
+    @media only screen and (min-width: 768px)
+        width: 35px
+        top: 50%
+        transform: translateY(-50%)
+    @media only screen and (min-width: 1441px)
+        width: 40px
+    li
+        width: calc( 100% / 4 )
+        @media only screen and (min-width: 576px)
+            width: 100%
+            padding: 1px
+        @media only screen and (min-width: 992px)
+            padding: 2.5px
+    a
+        font-size: 16px
+        line-height: 1
+        font-weight: 700
+        color: $white
+        width: 100%
+        height: 35px
+        padding: 4px
+        border-radius: 0
+        background: $basecolor
+        transition: all 0.4s ease
+        box-shadow: 0 0 10px 0 rgba($basecolor, 0.1)
+        @include center
+        @media only screen and (min-width: 576px)
+            width: 30px
+            height: 30px
+            border-radius: 3px
+        @media only screen and (min-width: 768px)
+            width: 35px
+            height: 35px
+        @media only screen and (min-width: 1441px)
+            width: 40px
+            height: 40px
+        &:hover
+            svg, img
+                transform: scale(0.9)
+        svg, img
+            @include imgFit
+            width: 16px
+            height: 16px
+            transition: all 0.5s ease
+            fill: $basecolor
+            @media only screen and (min-width: 576px)
+                width: 18px
+                height: 18px
+            @media only screen and (min-width: 992px)
+                width: 20px
+                height: 20px
+        &.call
+            background-color: $basecolor
+        &.whatsapp
+            background-color: #35E398
+        &.mail
+            background-color: $basecolor2
+        &.location
+            background-color: $white
+
