--- a/assets/sass/5-pages/_course.sass
+++ b/assets/sass/5-pages/_course.sass
@@ -402,6 +402,7 @@
                 font-family: $fontstack4
                 color: $text
                 margin-bottom: 10px
+                transition: all 0.6s ease
                 sub
                     font-size: 0.75rem
             .line
