--- a/assets/sass/4-layouts/_home.sass
+++ b/assets/sass/4-layouts/_home.sass
@@ -94,7 +94,7 @@
         padding: 60px 0
     .programSlide
         @media only screen and (max-width: 467px)
-            margin-right: -15px 
+            margin-right: -15px
         .swiper-slide
             margin-top: auto
     .programBx
@@ -302,8 +302,9 @@
                         transform: scale(1)
                         visibility: visible
             @media only screen and (max-width: 991px)
-                &.swiper-slide-active
+                &.swiper-slide
                     .expertiseBx
+                        width: 98%
                         &>img
                             transform: scale(1.05)
                         &::after
@@ -335,6 +336,11 @@
             visibility: hidden
             transform: scaleY(0)
             transition: all 0.4s ease
+            @media only screen and (max-width: 992px)
+                opacity: 0.6 !important
+                background: #2A7B9B
+                background: linear-gradient(46deg, rgba($basecolor2, 0.9) 4%, rgba($basecolor, 0.8) 30%, rgba(0, 0, 0, 0) 80%)
+
         &>img
             transition: transform 0.4s
             @include imgFit
@@ -351,12 +357,12 @@
             @media only screen and (min-width: 1551px)
                 font-size: 26px
         %expertiseBxTxt
-            font-size: 10px
+            font-size: 8px
             line-height: 1.4
             font-weight: 500
             color: $basecolor
             @media only screen and (min-width: 576px)
-                font-size: 12px
+                font-size: 10px
             @media only screen and (min-width: 992px)
                 font-size: 14px
             @media only screen and (min-width: 1551px)
@@ -380,8 +386,8 @@
             @media only screen and (min-width: 992px)
                 padding: 40px
             &>*
-                margin-top: 5px
-                margin-bottom: 5px
+                margin-top: 4px
+                margin-bottom: 4px
                 @media only screen and (min-width: 992px)
                     margin-top: 10px
                     margin-bottom: 10px
